update landing page

--- a/src/index.html
+++ b/src/index.html
@@ -59,12 +59,12 @@
                     <p>We care about our work and we care about our clients.</p>
                 </div>
                 <div class="hero-form">
-                    <input type="text" class="hero-input" placeholder="Enter Your Email">
-                    <button type="button" class="hero-button">Let's Talk</button>
+                    <input type="text" placeholder="Enter Your Email">
+                    <button type="button">Let's Talk</button>
                 </div>
             </div>
             <div class="hero-image-container">
-                <img src="Image/Image 1.png" alt="hero" class="hero-image">
+                <img src="Image/Image 1.png" alt="hero">
             </div>
         </section>
         <section class="partners">
@@ -112,18 +112,105 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <h7>Commitments</h7>
+                <div class="commitments-desc">
+                    <div class="commitments-text">
+                        <span>Commitments</span>
                         <p>We are committed to working with you collaboratively to understand your goals and create a
                             strategy that will achieve them.</p>
                     </div>
-                    <a href="/">Learn More <svg width="15" height="14" viewBox="0 0 15 14" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M0 6.53216C0 6.28471 0.0982978 6.0474 0.273269 5.87243C0.44824 5.69746 0.685551 5.59916 0.932997 5.59916H11.7427L7.73641 1.59474C7.56122 1.41955 7.4628 1.18193 7.4628 0.934176C7.4628 0.686417 7.56122 0.448806 7.73641 0.273614C7.9116 0.098422 8.14921 0 8.39697 0C8.64473 0 8.88234 0.098422 9.05754 0.273614L14.6555 5.8716C14.7424 5.95826 14.8113 6.06122 14.8584 6.17457C14.9054 6.28792 14.9296 6.40944 14.9296 6.53216C14.9296 6.65488 14.9054 6.77639 14.8584 6.88974C14.8113 7.00309 14.7424 7.10605 14.6555 7.19272L9.05754 12.7907C8.88234 12.9659 8.64473 13.0643 8.39697 13.0643C8.14921 13.0643 7.9116 12.9659 7.73641 12.7907C7.56122 12.6155 7.4628 12.3779 7.4628 12.1301C7.4628 11.8824 7.56122 11.6448 7.73641 11.4696L11.7427 7.46516H0.932997C0.685551 7.46516 0.44824 7.36686 0.273269 7.19189C0.0982978 7.01692 0 6.7796 0 6.53216Z"
-                                fill="#3461FF" />
-                        </svg></a>
+                    <div class="learn-more">
+                        <a href="/">Learn More <svg width="15" height="14" viewBox="0 0 15 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0 6.53216C0 6.28471 0.0982978 6.0474 0.273269 5.87243C0.44824 5.69746 0.685551 5.59916 0.932997 5.59916H11.7427L7.73641 1.59474C7.56122 1.41955 7.4628 1.18193 7.4628 0.934176C7.4628 0.686417 7.56122 0.448806 7.73641 0.273614C7.9116 0.098422 8.14921 0 8.39697 0C8.64473 0 8.88234 0.098422 9.05754 0.273614L14.6555 5.8716C14.7424 5.95826 14.8113 6.06122 14.8584 6.17457C14.9054 6.28792 14.9296 6.40944 14.9296 6.53216C14.9296 6.65488 14.9054 6.77639 14.8584 6.88974C14.8113 7.00309 14.7424 7.10605 14.6555 7.19272L9.05754 12.7907C8.88234 12.9659 8.64473 13.0643 8.39697 13.0643C8.14921 13.0643 7.9116 12.9659 7.73641 12.7907C7.56122 12.6155 7.4628 12.3779 7.4628 12.1301C7.4628 11.8824 7.56122 11.6448 7.73641 11.4696L11.7427 7.46516H0.932997C0.685551 7.46516 0.44824 7.36686 0.273269 7.19189C0.0982978 7.01692 0 6.7796 0 6.53216Z"
+                                    fill="#3461FF" />
+                            </svg></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="howitworks">
+            <div class="howitworks-container">
+                <div class="howitworks-desc">
+                    <div class="howitworks-text">
+                        <span>How It Works</span>
+                        <p>We believe that the best way to create successful marketing campaigns is to work closely with
+                            our clients to understand their goals and challenges.</p>
+                    </div>
+                    <div>
+                        <img src="/src/Image/Image 2.png" alt="How it Works">
+                    </div>
+                </div>
+                <div class="howitworks-info">
+                    <div class="discovery">
+                        <img src="/src/Image/Discovery.png" alt="Discovery">
+                        <div>
+                            <span>Discovery</span>
+                            <p>We meet with you to learn about your business, your goals, and your target audience.</p>
+                        </div>
+                    </div>
+                    <div class="strategy">
+                        <img src="/src/Image/Strategy.png" alt="Strategy">
+                        <div>
+                            <span>Strategy</span>
+                            <p>We develop a customized marketing strategy that is based on your unique needs and goals.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="execution">
+                        <img src="/src/Image/Excution.png" alt="Execution">
+                        <div>
+                            <span>Execution</span>
+                            <p>We execute our strategy using the latest digital marketing tools and techniques.</p>
+                        </div>
+                    </div>
+                    <div class="measurment">
+                        <img src="/src/Image/Measurement.png" alt="Measurment">
+                        <div>
+                            <span>Measurement</span>
+                            <p>We track the results of our campaigns so that we can make adjustments as needed.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="ourwork">
+            <div class="ourwork-container">
+                <div class="ourwork-desc">
+                    <span>Our Work</span>
+                    <p>A glimpse of our portfolio</p>
+                </div>
+                <div class="ourwork-img">
+                    <div>
+                        <img src="/src/Image/Apple.png" alt="Apple">
+                        <p>Apple</p>
+                    </div>
+                    <div>
+                        <img src="/src/Image/Coca-Cola.png" alt="Coca-Cola">
+                        <p>Coca-Cola</p>
+                    </div>
+                    <div>
+                        <img src="/src/Image/NIke.png" alt="Nike">
+                        <p>Nike</p>
+                    </div>
+                </div>
+                <div>
+                    <button type="button">See More</button>
+                </div>
+            </div>
+        </section>
+        <section class="cta-banner">
+            <div class="cta-banner-container">
+                <div class="cta-banner-desc">
+                    <img src="/src/Image/CTA-Banner.png" alt="CTA Banner">
+                    <div>
+                        <span>Elevate Your Brand Today!</span>
+                        <div class="cta-banner-confirm">
+                            <p>Ready to transform your digital dresence? Let's create magic together! book our services
+                                now!</p>
+                            <button type="button">Book Call</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
