Update landing page

--- a/src/index.html
+++ b/src/index.html
@@ -214,10 +214,210 @@
                 </div>
             </div>
         </section>
+        <section class="ourteam">
+            <div class="ourteam-container">
+                <div class="">
+                    <div>
+                        <img src="/src/Image/Image 3.png" alt="Meat Our Team">
+                    </div>
+                    <div>
+                        <div>
+                            <span>Meet Our Team</span>
+                            <p>Discover the brilliance behind Embrace. Our team blends innovation and artistry to craft
+                                digital wonders that captivate</p>
+                        </div>
+                        <div>
+                            <button type="button">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonial">
+            <div class="testimonial-container">
+                <div class="testimonial-desc">
+                    <div>
+                        <span>What Our Client Said about us</span>
+                    </div>
+                    <div>
+                        <button type="button" class="left"><svg width="25" height="23" viewBox="0 0 25 23" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M24.7497 11.5001C24.7497 11.9062 24.5884 12.2957 24.3013 12.5829C24.0141 12.87 23.6246 13.0314 23.2185 13.0314H5.47743L12.0526 19.6035C12.195 19.7458 12.3079 19.9149 12.385 20.1009C12.462 20.2869 12.5017 20.4863 12.5017 20.6876C12.5017 20.8889 12.462 21.0883 12.385 21.2743C12.3079 21.4603 12.195 21.6294 12.0526 21.7717C11.9103 21.9141 11.7412 22.027 11.5552 22.1041C11.3692 22.1811 11.1698 22.2208 10.9685 22.2208C10.7672 22.2208 10.5678 22.1811 10.3818 22.1041C10.1958 22.027 10.0267 21.9141 9.88437 21.7717L0.696871 12.5842C0.554271 12.442 0.441134 12.273 0.363939 12.087C0.286744 11.9009 0.247009 11.7015 0.247009 11.5001C0.247009 11.2987 0.286744 11.0993 0.363939 10.9132C0.441134 10.7272 0.554271 10.5582 0.696871 10.416L9.88437 1.22848C10.1719 0.940951 10.5619 0.779419 10.9685 0.779419C11.3751 0.779419 11.7651 0.940951 12.0526 1.22848C12.3401 1.51601 12.5017 1.90598 12.5017 2.3126C12.5017 2.71923 12.3401 3.1092 12.0526 3.39673L5.47743 9.96885H23.2185C23.6246 9.96885 24.0141 10.1302 24.3013 10.4173C24.5884 10.7045 24.7497 11.094 24.7497 11.5001Z"
+                                    fill="black" fill-opacity="0.3" />
+                            </svg></button>
+                        <button type="button" class="right"><svg width="25" height="23" viewBox="0 0 25 23" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0.250254 11.5001C0.250254 11.9062 0.411581 12.2957 0.698746 12.5829C0.98591 12.87 1.37539 13.0314 1.7815 13.0314H19.5226L12.9474 19.6035C12.805 19.7458 12.6921 19.9149 12.615 20.1009C12.538 20.2869 12.4983 20.4863 12.4983 20.6876C12.4983 20.8889 12.538 21.0883 12.615 21.2743C12.6921 21.4603 12.805 21.6294 12.9474 21.7717C13.0897 21.9141 13.2588 22.027 13.4448 22.1041C13.6308 22.1811 13.8302 22.2208 14.0315 22.2208C14.2328 22.2208 14.4322 22.1811 14.6182 22.1041C14.8042 22.027 14.9733 21.9141 15.1156 21.7717L24.3031 12.5842C24.4457 12.442 24.5589 12.273 24.6361 12.087C24.7133 11.9009 24.753 11.7015 24.753 11.5001C24.753 11.2987 24.7133 11.0993 24.6361 10.9132C24.5589 10.7272 24.4457 10.5582 24.3031 10.416L15.1156 1.22848C14.8281 0.940951 14.4381 0.779419 14.0315 0.779419C13.6249 0.779419 13.2349 0.940951 12.9474 1.22848C12.6599 1.51601 12.4983 1.90598 12.4983 2.3126C12.4983 2.71923 12.6599 3.1092 12.9474 3.39673L19.5226 9.96885H1.7815C1.37539 9.96885 0.98591 10.1302 0.698746 10.4173C0.411581 10.7045 0.250254 11.094 0.250254 11.5001Z"
+                                    fill="white" />
+                            </svg></button>
+                    </div>
+                </div>
+                <div>
+                    <div class="people">
+                        <div class="amelia">
+                            <div class="amelia-info">
+                                <img src="/src/Image/Amelia.png" alt="Amelia Profile">
+                                <div>
+                                    <span>Amelia Joseph</span>
+                                    <p>Chief Manager</p>
+                                </div>
+                            </div>
+                            <div class="amelia-desc">
+                                <p>My vision came alive effortlessly. Their blend of casual and professional approach
+                                    made
+                                    the process a breeze. Creativity flowed, and the results were beyond my
+                                    expectations.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="jacob">
+                            <div class="jacob-info">
+                                <img src="/src/Image/Jacob.png" alt="Jacob Profile">
+                                <div>
+                                    <span>Jacob Joshua</span>
+                                    <p>Chief Manager</p>
+                                </div>
+                            </div>
+                            <div class="jacob-desc">
+                                <p>I found the digital expertise I needed. Their creative-professional balance exceeded
+                                    expectations. Friendly interactions, exceptional outcomes. For digital enchantment,
+                                    it's
+                                    got to be Embrace!</p>
+                            </div>
+                        </div>
+                        <div class="jacob2">
+                            <div class="jacob2-info">
+                                <img src="/src/Image/Jacob2.png" alt="Jacob2 Profile">
+                                <div>
+                                    <span>Jacob Joshua</span>
+                                    <p>Chief Manager</p>
+                                </div>
+                            </div>
+                            <div class="jacob2-desc">
+                                <p>Embrace really nails it! Creative brilliance, approachable style. They're the
+                                    partners
+                                    you want—artistry meets strategy. Thrilled with what they achieved!"</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cta-banner2">
+            <div class="cta-banner2-container">
+                <div class="cta-banner2-desc">
+                    <img src="/src/Image/CTA Banner 2.png" alt="CTA Banner 2">
+                    <div class="cta-banner2-info">
+                        <div class="cta-banner2-confirm">
+                            <span>start your journey with us now</span>
+                            <button type="button">Start Now</button>
+                        </div>
+                        <div>
+                            <img src="/src/Image/Image 4.png" alt="CTA Banner 2 Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="help">
+            <div class="help-container">
+                <div class="help-container-faq">
+                    <div>
+                        <span>How do i sign up for the project?</span>
+                        <button type="button">+</button>
+                    </div>
+                    <div>
+                        <span>What thing that i should prepare before starting?</span>
+                        <button type="button">+</button>
+                    </div>
+                    <div>
+                        <span>Does my company need help for marketing advices?</span>
+                        <button type="button">+</button>
+                    </div>
+                </div>
+                <div class="help-faq">
+                    <div>
+                        <span>How We Can Help You?</span>
+                        <p>Follow our newsletter. We will regulary update our latest project and availability</p>
+                    </div>
+                    <div class="help-confirm">
+                        <input type="text" placeholder="Enter your Email">
+                        <button type="button">Lets Talk</button>
+                    </div>
+                    <div class="more-faq">
+                        <a href="/">More FAQ<svg width="15" height="14" viewBox="0 0 15 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0 6.53216C0 6.28471 0.0982978 6.0474 0.273269 5.87243C0.44824 5.69746 0.685551 5.59916 0.932997 5.59916H11.7427L7.73641 1.59474C7.56122 1.41955 7.4628 1.18193 7.4628 0.934176C7.4628 0.686417 7.56122 0.448806 7.73641 0.273614C7.9116 0.098422 8.14921 0 8.39697 0C8.64473 0 8.88234 0.098422 9.05754 0.273614L14.6555 5.8716C14.7424 5.95826 14.8113 6.06122 14.8584 6.17457C14.9054 6.28792 14.9296 6.40944 14.9296 6.53216C14.9296 6.65488 14.9054 6.77639 14.8584 6.88974C14.8113 7.00309 14.7424 7.10605 14.6555 7.19272L9.05754 12.7907C8.88234 12.9659 8.64473 13.0643 8.39697 13.0643C8.14921 13.0643 7.9116 12.9659 7.73641 12.7907C7.56122 12.6155 7.4628 12.3779 7.4628 12.1301C7.4628 11.8824 7.56122 11.6448 7.73641 11.4696L11.7427 7.46516H0.932997C0.685551 7.46516 0.44824 7.36686 0.273269 7.19189C0.0982978 7.01692 0 6.7796 0 6.53216Z"
+                                    fill="#3461FF" />
+                            </svg></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bottom">
+            <div class="bottom-container">
+                <div>
+                    <div class="logo">
+                        <a href="/">
+                            <svg width="36" height="21" viewBox="0 0 36 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M19 10.5C19 15.7467 14.7467 20 9.5 20C4.25329 20 0 15.7467 0 10.5C0 5.25329 4.25329 1 9.5 1C14.7467 1 19 5.25329 19 10.5Z"
+                                    fill="#3461FF" />
+                                <path
+                                    d="M34.5192 9.63622C35.1807 10.0221 35.1807 10.9779 34.5192 11.3638L19.5039 20.1227C18.8372 20.5116 18 20.0308 18 19.259L18 1.74104C18 0.969246 18.8372 0.488374 19.5039 0.877257L27 5.25L34.5192 9.63622Z"
+                                    fill="#3461FF" />
+                            </svg>
+                            <span>Embrace</span>
+                        </a>
+                    </div>
+                    <ul>
+                        <li><img src="" alt="Instagram"></li>
+                        <li><img src="" alt="Twitter"></li>
+                        <li><img src="" alt="Facebook"></li>
+                    </ul>
+                    <div>
+                        <button type="button">Contact Us</button>
+                    </div>
+                </div>
+                <div>
+                    <table>
+                        <tr>
+                            <td>Work With Us</td>
+                            <td>Private Coaching</td>
+                            <td>About Us</td>
+                        </tr>
+                        <tr>
+                            <td>Advertise With Us</td>
+                            <td>Our Work</td>
+                            <td>FAQs</td>
+                        </tr>
+                        <tr>
+                            <td>Support Us</td>
+                            <td>Our Commitment</td>
+                            <td>Report a Bug</td>
+                        </tr>
+                        <tr>
+                            <td>Business Advices</td>
+                            <td>Our Team</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <!-- Footer content -->
+        <div>
+            <p>© 2022 Embrace, Inc. - All Rights Reserved</p>
+            <div>
+                <p>Terms of use</p>
+                <p>Privacy policy</p>
+            </div>
+        </div>
     </footer>
 </body>
 
