--- a/src/index.html
+++ b/src/index.html
@@ -216,19 +216,19 @@
         </section>
         <section class="ourteam">
             <div class="ourteam-container">
-                <div class="">
+                <div class="ourteam-wrapper">
                     <div>
                         <img src="/src/Image/Image 3.png" alt="Meat Our Team">
                     </div>
+                </div>
+                <div>
                     <div>
-                        <div>
-                            <span>Meet Our Team</span>
-                            <p>Discover the brilliance behind Embrace. Our team blends innovation and artistry to craft
-                                digital wonders that captivate</p>
-                        </div>
-                        <div>
-                            <button type="button">Learn More</button>
-                        </div>
+                        <span>Meet Our Team</span>
+                        <p>Discover the brilliance behind Embrace. Our team blends innovation and artistry to craft
+                            digital wonders that captivate</p>
+                    </div>
+                    <div>
+                        <button type="button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -359,7 +359,7 @@
         </section>
         <section class="bottom">
             <div class="bottom-container">
-                <div>
+                <div class="bottom-wrapper">
                     <div class="logo">
                         <a href="/">
                             <svg width="36" height="21" viewBox="0 0 36 21" fill="none"
@@ -375,9 +375,15 @@
                         </a>
                     </div>
                     <ul>
-                        <li><img src="" alt="Instagram"></li>
-                        <li><img src="" alt="Twitter"></li>
-                        <li><img src="" alt="Facebook"></li>
+                        <li><a href=""><svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.9997 2.33325C17.1695 2.33325 17.565 2.34492 18.8087 2.40325C20.0512 2.46159 20.897 2.65642 21.6413 2.94575C22.4113 3.24209 23.06 3.64342 23.7087 4.29092C24.3019 4.87413 24.761 5.57961 25.0538 6.35825C25.342 7.10142 25.538 7.94842 25.5963 9.19092C25.6512 10.4346 25.6663 10.8301 25.6663 13.9999C25.6663 17.1698 25.6547 17.5653 25.5963 18.8089C25.538 20.0514 25.342 20.8973 25.0538 21.6416C24.7618 22.4207 24.3027 23.1263 23.7087 23.7089C23.1253 24.302 22.4199 24.761 21.6413 25.0541C20.8982 25.3423 20.0512 25.5383 18.8087 25.5966C17.565 25.6514 17.1695 25.6666 13.9997 25.6666C10.8298 25.6666 10.4343 25.6549 9.19067 25.5966C7.94817 25.5383 7.10234 25.3423 6.35801 25.0541C5.57906 24.7618 4.87346 24.3027 4.29067 23.7089C3.69732 23.1258 3.23826 22.4203 2.94551 21.6416C2.65617 20.8984 2.46134 20.0514 2.40301 18.8089C2.34817 17.5653 2.33301 17.1698 2.33301 13.9999C2.33301 10.8301 2.34467 10.4346 2.40301 9.19092C2.46134 7.94725 2.65617 7.10259 2.94551 6.35825C3.23745 5.57913 3.69661 4.87346 4.29067 4.29092C4.87362 3.69736 5.57917 3.23827 6.35801 2.94575C7.10234 2.65642 7.94701 2.46159 9.19067 2.40325C10.4343 2.34842 10.8298 2.33325 13.9997 2.33325ZM13.9997 8.16659C12.4526 8.16659 10.9688 8.78117 9.87489 9.87513C8.78092 10.9691 8.16634 12.4528 8.16634 13.9999C8.16634 15.547 8.78092 17.0307 9.87489 18.1247C10.9688 19.2187 12.4526 19.8333 13.9997 19.8333C15.5468 19.8333 17.0305 19.2187 18.1245 18.1247C19.2184 17.0307 19.833 15.547 19.833 13.9999C19.833 12.4528 19.2184 10.9691 18.1245 9.87513C17.0305 8.78117 15.5468 8.16659 13.9997 8.16659ZM21.583 7.87492C21.583 7.48814 21.4294 7.11721 21.1559 6.84372C20.8824 6.57023 20.5114 6.41659 20.1247 6.41659C19.7379 6.41659 19.367 6.57023 19.0935 6.84372C18.82 7.11721 18.6663 7.48814 18.6663 7.87492C18.6663 8.26169 18.82 8.63263 19.0935 8.90612C19.367 9.17961 19.7379 9.33325 20.1247 9.33325C20.5114 9.33325 20.8824 9.17961 21.1559 8.90612C21.4294 8.63263 21.583 8.26169 21.583 7.87492ZM13.9997 10.4999C14.9279 10.4999 15.8182 10.8687 16.4745 11.525C17.1309 12.1814 17.4997 13.0717 17.4997 13.9999C17.4997 14.9282 17.1309 15.8184 16.4745 16.4748C15.8182 17.1312 14.9279 17.4999 13.9997 17.4999C13.0714 17.4999 12.1812 17.1312 11.5248 16.4748C10.8684 15.8184 10.4997 14.9282 10.4997 13.9999C10.4997 13.0717 10.8684 12.1814 11.5248 11.525C12.1812 10.8687 13.0714 10.4999 13.9997 10.4999Z" fill="#3461FF"/>
+                            </svg></a></li>
+                        <li><a href=""><svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7.539 19.501C16.596 19.501 21.5505 11.9965 21.5505 5.50004C21.5505 5.29004 21.5505 5.07704 21.5415 4.86704C22.5061 4.16877 23.3386 3.30427 24 2.31404C23.099 2.71132 22.1441 2.97315 21.1665 3.09104C22.1963 2.4755 22.9676 1.50699 23.337 0.36554C22.3695 0.938726 21.3105 1.3411 20.2065 1.55504C19.4643 0.764575 18.4821 0.240916 17.4121 0.0651759C16.3422 -0.110564 15.2441 0.0714219 14.288 0.582946C13.3319 1.09447 12.5712 1.90698 12.1237 2.89463C11.6761 3.88228 11.5668 4.98994 11.8125 6.04604C9.85461 5.94787 7.93922 5.43924 6.19056 4.55315C4.4419 3.66707 2.89903 2.42331 1.662 0.90254C1.03401 1.98716 0.842361 3.27014 1.12597 4.49094C1.40958 5.71174 2.14718 6.77883 3.189 7.47554C2.40831 7.44902 1.64478 7.23938 0.96 6.86354V6.93104C0.961346 8.06726 1.35496 9.16817 2.07431 10.0477C2.79366 10.9272 3.79462 11.5313 4.908 11.758C4.48539 11.8745 4.04884 11.9325 3.6105 11.9305C3.30148 11.9315 2.99307 11.9028 2.6895 11.845C3.00418 12.8231 3.61691 13.6783 4.44187 14.2908C5.26683 14.9032 6.2627 15.2423 7.29 15.2605C5.54483 16.6312 3.3891 17.3746 1.17 17.371C0.778981 17.3727 0.388235 17.3501 0 17.3035C2.25227 18.7394 4.86795 19.5019 7.539 19.501V19.501Z" fill="#3461FF"/>
+                            </svg></a></li>
+                        <li><a href=""><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M23.6663 11.9999C23.6663 5.55992 18.4397 0.333252 11.9997 0.333252C5.55967 0.333252 0.333008 5.55992 0.333008 11.9999C0.333008 17.6466 4.34634 22.3483 9.66634 23.4333V15.4999H7.33301V11.9999H9.66634V9.08325C9.66634 6.83159 11.498 4.99992 13.7497 4.99992H16.6663V8.49992H14.333C13.6913 8.49992 13.1663 9.02492 13.1663 9.66659V11.9999H16.6663V15.4999H13.1663V23.6083C19.058 23.0249 23.6663 18.0549 23.6663 11.9999Z" fill="#3461FF"/>
+                            </svg></a></li>
                     </ul>
                     <div>
                         <button type="button">Contact Us</button>
@@ -411,9 +417,9 @@
     </main>
 
     <footer>
-        <div>
+        <div class="footer-container">
             <p>© 2022 Embrace, Inc. - All Rights Reserved</p>
-            <div>
+            <div class="term">
                 <p>Terms of use</p>
                 <p>Privacy policy</p>
             </div>
