--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
                 <h2>Companies we Work with</h2>
                 <div class="partners-image">
                     <ul>
-                        <li><img src="/src/Image/Spotify.png" alt="Spotify"></li>
-                        <li><img src="/src/Image/Google.png" alt="Google"></li>
-                        <li><img src="/src/Image/Uber.png" alt="Uber"></li>
-                        <li><img src="/src/Image/Microsoft.png" alt="Microsoft"></li>
-                        <li><img src="/src/Image/shopify.png" alt="shopify"></li>
+                        <li><img src="Image/Spotify.png" alt="Spotify"></li>
+                        <li><img src="Image/Google.png" alt="Google"></li>
+                        <li><img src="Image/Uber.png" alt="Uber"></li>
+                        <li><img src="Image/Microsoft.png" alt="Microsoft"></li>
+                        <li><img src="Image/shopify.png" alt="shopify"></li>
                     </ul>
                     <ul>
-                        <li><img src="/src/Image/Evernote.png" alt="Evernote"></li>
-                        <li><img src="/src/Image/Adobe.png" alt="Adobe"></li>
-                        <li><img src="/src/Image/Paypal.png" alt="Paypal"></li>
-                        <li><img src="/src/Image/Amazon.png" alt="Amazon"></li>
-                        <li><img src="/src/Image/asana.png" alt="asana"></li>
+                        <li><img src="Image/Evernote.png" alt="Evernote"></li>
+                        <li><img src="Image/Adobe.png" alt="Adobe"></li>
+                        <li><img src="Image/Paypal.png" alt="Paypal"></li>
+                        <li><img src="Image/Amazon.png" alt="Amazon"></li>
+                        <li><img src="Image/asana.png" alt="asana"></li>
                     </ul>
                 </div>
             </div>
@@ -165,19 +165,19 @@
                             our clients to understand their goals and challenges.</p>
                     </div>
                     <div>
-                        <img src="/src/Image/Image 2.png" alt="How it Works">
+                        <img src="Image/Image 2.png" alt="How it Works">
                     </div>
                 </div>
                 <div class="howitworks-info">
                     <div class="discovery">
-                        <img src="/src/Image/Discovery.png" alt="Discovery">
+                        <img src="Image/Discovery.png" alt="Discovery">
                         <div>
                             <span>Discovery</span>
                             <p>We meet with you to learn about your business, your goals, and your target audience.</p>
                         </div>
                     </div>
                     <div class="strategy">
-                        <img src="/src/Image/Strategy.png" alt="Strategy">
+                        <img src="Image/Strategy.png" alt="Strategy">
                         <div>
                             <span>Strategy</span>
                             <p>We develop a customized marketing strategy that is based on your unique needs and goals.
@@ -185,14 +185,14 @@
                         </div>
                     </div>
                     <div class="execution">
-                        <img src="/src/Image/Excution.png" alt="Execution">
+                        <img src="Image/Excution.png" alt="Execution">
                         <div>
                             <span>Execution</span>
                             <p>We execute our strategy using the latest digital marketing tools and techniques.</p>
                         </div>
                     </div>
                     <div class="measurment">
-                        <img src="/src/Image/Measurement.png" alt="Measurment">
+                        <img src="Image/Measurement.png" alt="Measurment">
                         <div>
                             <span>Measurement</span>
                             <p>We track the results of our campaigns so that we can make adjustments as needed.</p>
@@ -209,15 +209,15 @@
                 </div>
                 <div class="ourwork-img">
                     <div>
-                        <img src="/src/Image/Apple.png" alt="Apple">
+                        <img src="Image/Apple.png" alt="Apple">
                         <p>Apple</p>
                     </div>
                     <div>
-                        <img src="/src/Image/Coca-Cola.png" alt="Coca-Cola">
+                        <img src="Image/Coca-Cola.png" alt="Coca-Cola">
                         <p>Coca-Cola</p>
                     </div>
                     <div>
-                        <img src="/src/Image/NIke.png" alt="Nike">
+                        <img src="Image/NIke.png" alt="Nike">
                         <p>Nike</p>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
         <section class="cta-banner">
             <div class="cta-banner-container">
                 <div class="cta-banner-desc">
-                    <img src="/src/Image/CTA-Banner.png" alt="CTA Banner">
+                    <img src="Image/CTA-Banner.png" alt="CTA Banner">
                     <div>
                         <span>Elevate Your Brand Today!</span>
                         <div class="cta-banner-confirm">
@@ -245,7 +245,7 @@
             <div class="ourteam-container">
                 <div class="ourteam-wrapper">
                     <div>
-                        <img src="/src/Image/Image 3.png" alt="Meat Our Team">
+                        <img src="Image/Image 3.png" alt="Meat Our Team">
                     </div>
                 </div>
                 <div>
@@ -285,7 +285,7 @@
                     <div class="people">
                         <div class="amelia">
                             <div class="amelia-info">
-                                <img src="/src/Image/Amelia.png" alt="Amelia Profile">
+                                <img src="Image/Amelia.png" alt="Amelia Profile">
                                 <div>
                                     <span>Amelia Joseph</span>
                                     <p>Chief Manager</p>
@@ -301,7 +301,7 @@
                         </div>
                         <div class="jacob">
                             <div class="jacob-info">
-                                <img src="/src/Image/Jacob.png" alt="Jacob Profile">
+                                <img src="Image/Jacob.png" alt="Jacob Profile">
                                 <div>
                                     <span>Jacob Joshua</span>
                                     <p>Chief Manager</p>
@@ -316,7 +316,7 @@
                         </div>
                         <div class="jacob2">
                             <div class="jacob2-info">
-                                <img src="/src/Image/Jacob2.png" alt="Jacob2 Profile">
+                                <img src="Image/Jacob2.png" alt="Jacob2 Profile">
                                 <div>
                                     <span>Jacob Joshua</span>
                                     <p>Chief Manager</p>
@@ -335,14 +335,14 @@
         <section class="cta-banner2">
             <div class="cta-banner2-container">
                 <div class="cta-banner2-desc">
-                    <img src="/src/Image/CTA Banner 2.png" alt="CTA Banner 2">
+                    <img src="Image/CTA Banner 2.png" alt="CTA Banner 2">
                     <div class="cta-banner2-info">
                         <div class="cta-banner2-confirm">
                             <span>start your journey with us now</span>
                             <button type="button">Start Now</button>
                         </div>
                         <div>
-                            <img src="/src/Image/Image 4.png" alt="CTA Banner 2 Image">
+                            <img src="Image/Image 4.png" alt="CTA Banner 2 Image">
                         </div>
                     </div>
                 </div>
