--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Your marketing agency description here">
     <meta property="og:image" content="path-to-your-image.jpg">
     <meta property="og:url" content="your-website-url.com">
-    <title>Marketing Agency | Your Brand Name</title>
+    <title>Marketing Agency</title>
     <link rel="canonical" href="your-website-url.com">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
